feat: Mapped payment status entity enum and fixed the mapper/adapter