@@ -1,12 +1,16 @@
 package com.immfly.payments.infrastructure.mapper;
 
 import com.immfly.payments.domain.model.Order;
+import com.immfly.payments.domain.model.Payment;
+import com.immfly.payments.domain.model.Product;
 import com.immfly.payments.infrastructure.entity.OrderEntity;
 import com.immfly.payments.infrastructure.entity.OrderStatusEntity;
+import java.util.List;
 import java.util.stream.Collectors;
 
 public class OrderMapper {
 
+    private OrderMapper() {}
 
     public static OrderEntity toEntity(Order order) {
         if (order == null) return null;
@@ -15,7 +19,6 @@ public class OrderMapper {
         entity.setSeatLetter(order.seatLetter());
         entity.setSeatNumber(order.seatNumber());
         entity.setTotalPrice(order.totalPrice());
-        // Convert domain enum to persistence enum
         entity.setStatus(OrderStatusEntity.fromDomain(order.status()));
         if (order.products() != null) {
             entity.setProducts(order.products().stream()
@@ -28,13 +31,18 @@ public class OrderMapper {
     public static Order toDomain(OrderEntity entity) {
         if (entity == null) return null;
         Order order = new Order(entity.getId(), entity.getSeatLetter(), entity.getSeatNumber());
-        order.totalPrice(entity.getTotalPrice());
-        // Convert persistence enum back to domain enum
-        order.status(entity.getStatus().toDomain());
+        Payment payment = order.payment();
+        switch (entity.getStatus()) {
+            case CANCELED -> order.cancel();
+            case FINISHED -> order.finishOrder(payment);
+            case DROPPED -> order.dropped();
+            case OPEN -> order.status();
+        }
         if (entity.getProducts() != null) {
-            order.setProducts(entity.getProducts().stream()
+            entity.getProducts().stream()
                 .map(ProductMapper::toDomain)
-                .collect(Collectors.toList()));
+                .toList()
+                .forEach(order::addProduct);
         }
         return order;
     }
